some of the small changes
made some few changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <h2>engine displacement calculator</h2>
         <form >
             <div>
+                <p>Measurement Units</p>
+                <select  id="option">
+                    <option value="cc">Cubic Centimeters (CC)</option>
+                    <option value="ci">Cubic Inches (CI)</option>
+                </select>
+            </div>
+            <div>
                 <input type="text" required id="bore">
                 <label>Piston/Bore (Milimeters)</label>
             </div>
